--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "eslint ./src && npx ts-node-dev index.ts",
-    "start": "npx ts-node index.ts",
+    "start": "nodemon index.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "Pedro Samuel Fagundez <samuelfagundez97@gmail.com>",
@@ -16,21 +15,20 @@
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
-    "ts-node-dev": "^1.0.0"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.1",
     "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.3.2"
+    "mongoose": "^5.12.11"
   }
 }
